
* Changed remote packets

single-inf-arg in qSupported
  The new single-inf-arg feature within the qSupported packet allows
  GDB to inform the stub that it would like to send the inferior
  arguments as a single string within the vRun packet.  The stub can
  reply with the single-inf-arg feature to indicate that it is able to
  accept arguments as a single string.

*** Changes in GDB 17

* Debugging Linux programs that use x86-64 or x86-64 with 32-bit pointer
  size (X32) Shadow Stacks are now supported.

* Support for the shadow stack pointer register on x86-64 or x86-64 with
  32-bit pointer size (X32) GNU/Linux.

* Debugger Adapter Protocol changes

  ** GDB now supports the "completions" request.

* "set style" commands now supports numeric format for basic colors
  from 0 to 255 and #RRGGBB format for TrueColor.

* New built-in convenience variable $_colorsupport provides comma-separated
  list of color space names supported by terminal.  Each color space name is one
  of monochrome, ansi_8color, aixterm_16color, xterm_256color or rgb_24bit.
  It is handy for conditionally using styling colors based on terminal features.
  For example:

  (gdb) if $_regex ($_colorsupport, ".*(^|,)rgb_24bit($|,).*")
   >set style filename background #FACADE
   >else
   >if $_regex ($_colorsupport, ".*(^|,)xterm_256color($|,).*")
    >set style filename background 224
    >else
    >set style filename background red
    >end
   >end

* UST (static tracepoint) support from gdbserver has been removed.

* Linux checkpoint code has been updated to work with multiple inferiors.

* The gcore and gdb-add-index scripts now have a -v or --version
  option, which prints the version number, and then exits.  As well as
  a -h or --help option, which prints each options and a brief
  description.

* On systems that support linker namespaces, the output of the command
  "info sharedlibraries" may add one more column, NS, which identifies the